# Genetic_algorithm

./: CMakeLists.txt  README.md  architectur  build.sh  simple-ga-pipline.cc  simple-ga-test.cc
Test_all_ga/: MIGRATION_COMPLETED.md  Makefile.inc  Makefile.test  README_COMPLETE.md  module-GeneticAlgorithm.cc  module-GeneticAlgorithm.h  test_complete_ga.cc
crossover/: Makefile  README.md  base_crossover.h  blend_crossover.cc  blend_crossover.h  crossover.cc  crossover_all.cc  crossover_all.h  crossover_base.cc  crossover_base.h  cut_and_crossfill_crossover.cc  cut_and_crossfill_crossover.h  cycle_crossover.cc  cycle_crossover.h  differential_evolution_crossover.cc  diploid_recombination.cc  diploid_recombination.h  edge_crossover.cc  edge_crossover.h  intermediate_recombination.cc  intermediate_recombination.h  line_recombination.cc  multi_point_crossover.cc  multi_point_crossover.h  one_point_crossover.cc  one_point_crossover.h  order_crossover.cc  order_crossover.h  partially_mapped_crossover.cc  partially_mapped_crossover.h  simulated_binary_crossover.cc  simulated_binary_crossover.h  subtree_crossover.cc  subtree_crossover.h  two_point_crossover.cc  two_point_crossover.h  uniform_crossover.cc  uniform_crossover.h  uniform_k_vector_crossover.cc
crossover/crossover/: all_crossover_operators.cc  all_crossover_operators.h  base_crossover.cc  blend_crossover.cc  cycle_crossover.h  differential_evolution_crossover.h  edge_crossover.cc  intermediate_recombination.cc  intermediate_recombination.h  line_recombination.h  multi_point_crossover.cc  one_point_crossover.cc  order_crossover.h  partially_mapped_crossover.h  simulated_binary_crossover.h  subtree_crossover.cc  subtree_crossover.h  test_crossover_operators.cc  two_point_crossover.cc  uniform_crossover.cc  uniform_crossover.h  uniform_k_vector_crossover.h
examples/: minimal.cpp
include/ga/: config.hpp  genetic_algorithm.hpp
mutation/: base_mutation.h  creep_mutation.cc  creep_mutation.h  gaussian_mutation.cc  insert_mutation.cc  insert_mutation.h  inversion_mutation.cc  list_mutation.cc  list_mutation.h  random_resetting_mutation.h  scramble_mutation.cc  scramble_mutation.h  self_adaptive_mutation.cc  self_adaptive_mutation.h  swap_mutation.cc  swap_mutation.h  uniform_mutation.h
mutation/mutation/: all_mutation_operators.cc  all_mutation_operators.h  base_mutation.cc  bit_flip_mutation.cc  bit_flip_mutation.h  gaussian_mutation.h  insert_mutation.cc  insert_mutation.h  inversion_mutation.h  list_mutation.cc  list_mutation.h  random_resetting_mutation.cc  scramble_mutation.cc  scramble_mutation.h  self_adaptive_mutation.cc  self_adaptive_mutation.h  uniform_mutation.cc
selection-operator/: base_selection.cc  elitism_selection.cc  roulette_wheel_selection.cc  roulette_wheel_selection.h  tournament_selection.cc  tournament_selection.h
selection-operator/selection-operator/: all_selection_operators.cc  all_selection_operators.h  base_selection.h  elitism_selection.h  rank_selection.cc  rank_selection.h  roulette_wheel_selection.cc  stochastic_universal_sampling.cc  stochastic_universal_sampling.h
simple-GA-Test/: Makefile
src/: genetic_algorithm.cpp
tests/: operators_sanity.cc
